[package]
name = "mech-host-console"
version = "0.3.5"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "Cross-platform console output host provider for Mech runtime."
documentation = "https://docs.mech-lang.org"
homepage = "https://mech-lang.org"
repository = "https://github.com/mech-lang/mech"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.92"

[features]
default = []
native = []
browser = ["dep:wasm-bindgen", "dep:web-sys"]

[dependencies]
mech-core = { version = "0.3.5", default-features = false }
mech-runtime = { version = "0.3.5", default-features = false, features = ["program"] }
wasm-bindgen = { version = "0.2.105", optional = true }
web-sys = { version = "0.3.82", optional = true, features = ["console"] }
