[package]
name = "mech-host-robot-arm"
version = "0.3.5"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "Mock robot arm host integration for Mech runtimes."
license = "Apache-2.0"
edition = "2024"
rust-version = "1.92"

[features]
default = []
provider = ["mech-core/string", "mech-core/bool", "mech-runtime/program"]

[dependencies]
mech-core = { version = "0.3.5", default-features = false }
mech-runtime = { version = "0.3.5", default-features = false }
