[package]
name = "mech-string"
version = "0.0.5"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "String manipulation library for the Mech language"
documentation = "http://docs.mech-lang.org"
homepage = "http://mech-lang.org"
repository = "https://github.com/mech-machines/string"
keywords = ["mech", "language", "programming"]
license = "Apache-2.0"
readme = "README.md"

[badges]
gitlab = { repository = "mech-lang/machines/string", branch = "main" }
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
mech-core = {git = "https://gitlab.com/mech-lang/core", branch = "v0.1-beta", default-features = false}
mech-utilities = {git = "https://gitlab.com/mech-lang/utilities", branch = "v0.1-beta", default-features = false}

lazy_static = "1.4.0"