[package]
name = "mech-core"
version = "0.2.57"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "The Mech language runtime."
documentation = "http://docs.mech-lang.org"
homepage = "https://mech-lang.org"
repository = "https://github.com/mech-lang/mech"
keywords = ["mech", "language", "programming", "dataflow", "runtime"]
categories = ["no-std", "science::robotics", "science", "game-engines", "database-implementations"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.88"

[badges]
gitlab = { repository = "mech-lang/core", branch = "main" }
maintenance = { status = "actively-developed" }

[features]
default = ["stdlib", "pretty_print", "serde"]
serde = ["brotli", "base64", "serde_derive", "serde_json", "bincode", "indexmap/serde", "bincode/serde", "dep:serde"]
no_std = ["rlibc"]
stdlib = ["bool", "functions", "string", "numbers", "matrix", "set", "map", "table", "tuple", "record", "atom", "math"]
functions = ["indexmap"]
math = ["math_exp"]
pretty_print = ["tabled", "serde_json"]
math_exp = ["libm", "num-traits"]
numbers = ["signed_ints", "unsigned_ints", "floats", "complex", "rational"]
complex = ["c64", "nalgebra"]
rational = ["r64", "num-rational"]
signed_ints = ["i8", "i16", "i32", "i64", "i128"]
unsigned_ints = ["u8", "u16", "u32", "u64", "u128"]
floats = ["f32", "f64"]
bool = []
string = []
u8 = []
u16 = []
u32 = []
u64 = []
u128 = []
i8 = []
i16 = []
i32 = []
i64 = []
i128 = []
f32 = ["num-traits"]
f64 = ["num-traits"]
c64 = []
r64 = []
set = ["indexmap"]
map = ["indexmap"]
table = ["matrix", "indexmap", "record"]
tuple = []
record = ["indexmap", "tuple"]
atom = []
matrix = [
  "fixed_matrix", "fixed_vector", "fixed_row_vector", "row_vectord", "vectord", "matrixd",
  "nalgebra"
  ]
fixed_row_vector = ["row_vector4", "row_vector3", "row_vector2"]
fixed_vector = ["vector4", "vector3", "vector2"]
fixed_matrix = ["matrix4", "matrix3", "matrix2", "matrix1", "matrix2x3", "matrix3x2"]
row_vector4 = []
row_vector3 = []
row_vector2 = []
vector4 = []
vector3 = []
vector2 = []
matrix4 = []
matrix3 = []
matrix2 = []
matrix1 = []
matrix2x3 = []
matrix3x2 = []
row_vectord =[]
vectord = []
matrixd = []

[dependencies]
seahash = "4.1.0"
paste = "1.0.15"
byteorder = "1.5.0"
crc32fast = "1.5.0"
base64 = {version = "0.22.1", optional = true}
bincode = {version = "2.0.1", optional = true}
brotli = {version = "8.0.1", optional = true}
hashbrown = {version = "0.15.5", optional = true}
indexmap = {version = "2.10.0", optional = true}
libm = {version = "0.2.15", optional = true}
nalgebra = {version="0.34.0", optional = true}
rayon = {version = "1.10.0", optional = true}
rlibc = { version = "=1.0", optional = true }
serde = {version = "1.0.219", default-features = false, features = ["alloc", "derive"], optional = true}
serde_derive = {version = "1.0.219", optional = true}
serde_json = {version = "1.0.142", optional = true}
tabled = {version="0.18.0", optional = true}
wasm-bindgen = {version = "0.2.100", optional = true}
num-rational = {version = "0.4.2", optional = true}
#time = {version = "0.3.40", optional = true}
#ed25519-dalek = {version = "2.1.1", default-features = false, features = ["rand_core"]}
#rand = "0.9.0"
#tinyrand = "0.5.0"
#rand_core = {version = "0.9.3"}
#simba = "0.9.0"
#rkyv = "0.8.10"
#bytemuck = "1.22.0"

[dependencies.web-sys]
version = "0.3.77"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Crypto',
  'console'
]
optional = true

[dependencies.num-traits]
version = "0.2.19"
default-features = false
features = ["libm"]
optional = true
